fix spacing

--- a/components/AssistantSessionPage/AssistantSessionPage.module.css
+++ b/components/AssistantSessionPage/AssistantSessionPage.module.css
@@ -1,5 +1,6 @@
 .backButton {
     margin: 15px;
+    margin-bottom: 0px;
 }
 
 .sessionCode {
